--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@
     --hue2: 47;
     --bg-color: hsl(var(--hue1), 100%, 97%);
     --main-color-1: #001932;
+    --main-color-alt: #001932a8;
     --main-color-highlight: #003B64;
     --sec-color: #FE621D;
+    --sec-color-dark: #c9521f;
     --neu-color: #ffffff;
+    --neu-color-2: #ffffff7e;
+    
 }
 
 /* --------------Main styles----------------- */
@@ -47,23 +51,58 @@ ul {
     margin: 0 auto;
 }
 
+.sub-heading {
+    color: var(--main-color-1);
+    text-transform: uppercase;
+    font-size: 0.85rem;
+    letter-spacing: 0.5px;
+    border-left: 3px solid var(--sec-color);
+    padding: .13rem 0.75rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+
+.heading {
+    color: var(--main-color-1);
+    font-size: 3rem;
+    font-family: "Abril Fatface", cursive;
+    font-size: 400;
+    line-height: 1.3;
+}
+
+.text {
+    color: var(--main-color-alt);
+    font-size: 0.9rem;
+    margin: 2rem 0;
+}
+
 
 /* --------------Nav styles----------------- */
 header {
     position: fixed;
     top: 0;
     left: 0;
+    padding-top: 20px;
     width: 100%;
     z-index: 10;
+    transition: .3s;
+}
+
+header.scrolled {
+    background-color: var(--neu-color-2);
+    box-shadow: 0 5px 20px 0.1px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
 }
 
 .logo {
     margin-right: 1.5rem;
     width: 100px;
+    transition: .3s;
 }
 
-header .logo {
-    height: 120px;
+header.scrolled .logo {
+    height: 80px;
+    padding-top: 0px;
 }
 
 nav.container {
@@ -137,4 +176,85 @@ nav.container {
 
 .toggle-btn:hover {
     filter: brightness(96%)
+}
+
+
+/* --------------Hero styles----------------- */
+.showcase-area {
+    padding: 120px 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+.showcase-area .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    height: calc(100vh -120px);
+    max-height: 600px;
+    align-items: center;
+}
+
+.showcase-area .sub-heading {
+    margin-bottom: 0.7rem;
+}
+
+.showcase-area .heading {
+    font-size: 3.5rem;
+}
+
+.showcase-area .text {
+    margin: 0.8rem 0;
+}
+
+.cta {
+    margin-top: 3.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.cta .btn {
+    margin-right: 1.5rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: .9rem 1.75rem;
+    border-radius: 12px;
+    background-color: var(--sec-color);
+    color: var(--main-color-1);
+    font-size: .85rem;
+    letter-spacing: .4px;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.btn:hover {
+    background-color: var(--sec-color-dark);
+}
+
+.btn.secondary-btn {
+    position: relative;
+    background-color: transparent;
+    color: var(--main-color-1);
+    font-weight: 500;
+    font-size: 0.9rem;
+    letter-spacing: 0px;
+    border-bottom: 2.5px solid var(--sec-color);
+    border-radius: 0px;
+    padding: 0.15rem 0;
+}
+
+.btn.secondary-btn::before {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 2.5px;
+    bottom: -2.5px;
+    left: 0;
+    background-color: var(--main-color-1);
+    transition: 0.3s ease-in-out;
+}
+
+.btn.secondary-btn:hover::before {
+    width: 100%;
 }
