--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --sec-color-dark: #c9521f;
     --neu-color: #ffffff;
     --neu-color-2: #ffffff7e;
+    --section-padding: 7rem;
     
 }
 
@@ -41,6 +42,8 @@ a {
 ul {
     list-style: none;
 }
+/* --------------End----------------- */
+
 
 /* --------------Reusable styles----------------- */
 .container {
@@ -75,6 +78,7 @@ ul {
     font-size: 0.9rem;
     margin: 2rem 0;
 }
+/* --------------End----------------- */
 
 
 /* --------------Nav styles----------------- */
@@ -177,6 +181,7 @@ nav.container {
 .toggle-btn:hover {
     filter: brightness(96%)
 }
+/* --------------End----------------- */
 
 
 /* --------------Hero styles----------------- */
@@ -184,6 +189,7 @@ nav.container {
     padding: 120px 0;
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 .showcase-area .container {
@@ -288,34 +294,43 @@ nav.container {
 .showcase-image .dots {
     position: absolute;
     left: 95%;
-    top: 30%;
+    top: 20%;
     transform: translate(-50%, -50%);
 }
 
 .showcase-image .rectangle {
     position: absolute;
-    left: 40%;
+    left: -30%;
     top: 30%;
     transform: translate(-50%, -50%);
 }
 
 .showcase-image .rectangle1 {
     position: absolute;
-    left: 100%;
+    left: 98%;
     top: 80%;
     transform: translate(-50%, -50%);
 }
 
 .showcase-image .dots1 {
     position: absolute;
-    left: 40%;
+    left: 0%;
     top: 90%;
     transform: translate(-50%, -50%);
 }
 
 .showcase-image .dots2 {
     position: absolute;
-    left: 5%;
+    left: -96%;
     top: 10%;
     transform: translate(-50%, -50%);
+}
+/* --------------End----------------- */
+
+
+/* --------------About style----------------- */
+
+.about {
+    position: relative;
+    padding: var(--section-padding) 0;
 }
