--- a/style.css
+++ b/style.css
@@ -78,6 +78,11 @@ ul {
     font-size: 0.9rem;
     margin: 2rem 0;
 }
+
+.section {
+    position: relative;
+    padding: var(--section-padding) 0;
+}
 /* --------------End----------------- */
 
 
@@ -330,7 +335,160 @@ nav.container {
 
 /* --------------About style----------------- */
 
-.about {
-    position: relative;
-    padding: var(--section-padding) 0;
+.about .container {
+    display: grid;
+    grid-template-columns: 1.05fr 1fr;
+    align-items: center;
+    margin-top: -60px;
 }
+
+.about .text {
+    margin: 3rem 0 4rem;
+}
+
+.about-grid {
+    display: grid;
+    grid-template-columns: 190px 190px;
+    grid-template-rows: 190px 190px;
+    justify-content: center;
+    column-gap: 2.5rem;
+    row-gap: 100px;
+    margin-right: 2rem;
+    position: relative;
+}
+
+.about-card {
+    background-color: var(--neu-color);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.5s transform;
+}
+
+.about-card:nth-child(1) {
+    border-radius: 40px 40px 5px 40px;
+}
+
+.about-card:nth-child(2) {
+    margin-top: 50px;
+    border-radius: 40px 40px 40px 5px;
+}
+
+.about-card:nth-child(3) {
+    margin-top: -50px;
+    border-radius: 40px 5px 40px 40px;
+}
+.about-card:nth-child(4) {
+    border-radius: 5px 40px 40px 40px;
+}
+
+.st1 {
+    fill: var(--main-color-1);
+    opacity: 0.4;
+}
+
+.st2 {
+    stroke: var(--main-color-1);
+    fill: var(--sec-color);
+}
+
+.st2-a {
+    stroke: var(--sec-color);
+}
+
+.st3 {
+    stroke: var(--main-color-1);
+    
+}
+
+.st4 {
+    stroke: var(--main-color-1);
+}
+
+.st5 {
+    stroke: var(--main-color-1);
+    fill: var(--sec-color);
+}
+
+.st6 {
+    stroke: var(--main-color-1);
+    
+}
+
+.st7 {
+    stroke: var(--main-color-1);
+    
+}
+
+.st8 {
+    stroke: var(--main-color-1);
+    
+    
+}
+
+.st9 {
+    stroke: var(--main-color-1);
+}
+
+.about-card h3 {
+    color: var(--main-color-1);
+    font-weight: 600;
+    font-size: .9rem;
+    margin-top: 1rem;
+    letter-spacing: .3px;
+}
+
+.about-card:hover {
+    transform: scale(1.1);
+}
+
+.about-grid::before {
+    content: "";
+    position: absolute;
+    width: 210px;
+    height: 210px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 15px solid var(--main-color-1);
+    z-index: -1;
+    opacity: 0.07;
+}
+
+.about-info .about-dots {
+    width: 45px;
+    position: absolute;
+    left: 90%;
+    top: 20%;
+    transform: translate(-50%, -50%);
+}
+
+/* --------------end----------------- */
+
+
+/* --------------Skills style----------------- */
+
+.skills {
+    overflow: hidden;
+    margin-top: -60px;
+}
+
+.skills-box {
+    background-color: var(--neu-color);
+    padding: 5rem 6rem;
+    border-radius: 20px;
+    width: 100%;
+}
+
+.skills .dots2 {
+    width: 70px;
+    position: absolute;
+    left: 90%;
+    top: 15%;
+    transform: translate(-50%, -50%);
+}
+
