--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+body.stopScrolling {
+    height: 100%;
+    overflow: hidden;
+}
+
 ::selection {
     background-color: var(--sec-color);
     color: var(--main-color-1);
@@ -603,6 +608,10 @@ nav.container {
 
 /* --------------Portfolio Styling----------------- */
 
+.portfolio .container {
+    transition: .4s;
+}
+
 .portfolio-header {
     display: flex;
     align-items: flex-end;
@@ -741,7 +750,7 @@ nav.container {
     height: 100vh;
     overflow: hidden;
     z-index: 11;
-
+    pointer-events: none;
 }
 
 .modal-overlay {
@@ -751,22 +760,120 @@ nav.container {
     top: 0;
     left: 0;
     background-color: #00000096;
+    opacity: 0;
+    transition: .3s;
 }
 
 .slider-wrap {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, calc(-50% + 400px));
     width: 90%;
     max-width: 900px;
+    display: grid;
+    grid-template-columns: 100px 1fr 100px;
+    align-items: center;
+    justify-items: center;
+    opacity: 0;
+    transition: .2s;
 }
 
-.slider-wrap img{
+.slider-wrap img {
     width: 100%;
     display: none;
+    border-radius: 10px;
+}
+
+.navigation {
+    color: #ffffff;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
 .slider-wrap img.showImage {
     display: block;
+}
+
+.portfolio.open .modal {
+    pointer-events: auto;
+}
+
+.portfolio.open .modal-overlay {
+    opacity: 1;
+}
+
+.portfolio.open .container {
+    transform: scale(0.9);
+}
+
+.portfolio.open .slider-wrap {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: .45s 0.1s;
+}
+
+/* --------------end----------------- */
+
+/* --------------Testimonial Styling----------------- */
+
+.testimonial {
+    padding: ;
+}
+
+.testimonial .container {
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
+    align-items: center;
+}
+
+
+.reviews {
+    width: 100%;
+    height: 400px;
+    background-color: var(--sec-color);
+    border-radius: 15px;
+}
+
+.testimonial-title {
+    padding-left: 3rem;
+}
+
+/* .testimonial-title > * {
+    color: #fff;
+} */
+
+.section-background {
+    position: absolute;
+    width: 100vw;
+    max-width: 75rem;
+    height: calc(100% + 120px);
+    top: 15px;
+    left: 50%;
+    transform: translateX(calc(-50% + 120px));
+    background-color: var(--neu-color);
+    border-bottom-left-radius: 60px;
+    z-index: -1;
+}
+
+.section-background .person {
+    position: absolute;
+    height: 450px;
+    bottom: 4%;
+    right: 5%;
+}
+
+/* --------------end_incomplete----------------- */
+
+
+/* --------------Contact styling----------------- */
+
+.contact .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4rem;
+}
+
+.mail {
+    
 }
