--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     overflow-x: hidden;
     background-color: var(--bg-color);
     font-family: 'Poppins', sans-serif;
+    transition: .3s background-color;
 }
 
 body.stopScrolling {
@@ -102,6 +103,7 @@ ul {
     padding: .13rem 0.75rem;
     margin-bottom: 1rem;
     font-weight: 500;
+    transition: .3 color;
 }
 
 .heading {
@@ -110,12 +112,14 @@ ul {
     font-family: "Abril Fatface", cursive;
     font-size: 400;
     line-height: 1.3;
+    transition: .3 color;
 }
 
 .text {
     color: var(--text);
     font-size: 0.9rem;
     margin: 2rem 0;
+    transition: .3 color;
 }
 
 .section {
