--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ ul {
     padding: .13rem 0.75rem;
     margin-bottom: 1rem;
     font-weight: 500;
-    transition: .3 color;
+    transition: .3s color;
 }
 
 .heading {
@@ -112,14 +112,14 @@ ul {
     font-family: "Abril Fatface", cursive;
     font-size: 400;
     line-height: 1.3;
-    transition: .3 color;
+    transition: .3s color;
 }
 
 .text {
     color: var(--text);
     font-size: 0.9rem;
     margin: 2rem 0;
-    transition: .3 color;
+    transition: .3s color;
 }
 
 .section {
@@ -246,7 +246,7 @@ nav.container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     height: calc(100vh -120px);
-    max-height: 600px;
+    height: 600px;
     align-items: center;
 }
 
@@ -420,7 +420,7 @@ nav.container {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: 0.5s transform;
+    transition: 0.5s transform, .3s background;
 }
 
 .about-card:nth-child(1) {
@@ -603,6 +603,7 @@ nav.container {
     align-items: flex-start;
     justify-content: space-between;
     min-height: 280px;
+    transition: .3s background-color;
 }
 
 .srv-card h3 {
@@ -1031,4 +1032,52 @@ footer .social-media {
     align-items: center;
     justify-content: center;
     transition: .3s;
+}
+
+/* --------------end----------------- */
+
+
+/* --------------1000px screen----------------- */
+
+@media screen and (max-width: 1000px) {
+    .sub-heading {
+        font-size: .75rem;
+    }
+
+    .heading {
+        font-size: 2rem;
+    }
+
+    .showcase-area .heading {
+        font-size: 2.7rem;
+    }
+
+    .text {
+        font-size: 0.84rem;
+        margin: 1.3rem 0;
+    }
+
+    .btn {
+        padding: 0.8rem 1.6rem;
+        font-size: 0.8rem;
+        min-width: 100px;
+    }
+
+    .btn.secondary-btn {
+        font-size: 0.85rem;
+    }
+
+    .form-input {
+        padding: 0.8rem 1.45rem;
+        border-radius: 15px;
+        font-size: 0.8rem;
+    }
+
+    .nav-link {
+        font-size: .7rem;
+    }
+
+    .showcase-area {
+        padding: 100px 0;
+    }
 }
