--- a/css/style.css
+++ b/css/style.css
@@ -233,23 +233,30 @@ nav.container {
     filter: brightness(96%)
 }
 
-.hamburger {    
-    float: right;
-    height: 25px;
-    width: 40px;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.hamburger {
+    padding: 1rem 0;
+    height: 12px;
+    width: 25px;
+    box-sizing: content-box;
     cursor: pointer;
-    background-color: pink;
+    position: relative;
 }
 
-.hamburger i {
-    width: 200px;
+.hamburger .bar {
+    width: 100%;
+    height: 2px;
+    background-color: var(--heading);
+    border-radius: 3px;
+    position: absolute;
 }
 
+.hamburger .bar:first-child {
+    top: 1rem;
+}
+
+.hamburger .bar:last-child {
+    bottom: 1rem;
+}
 /* --------------End----------------- */
 
 
