--- a/css/style.css
+++ b/css/style.css
@@ -1188,6 +1188,8 @@ footer .social-media {
         align-items: center;
         justify-content: center;
         padding: 0.5rem 0 2rem;
+        opacity: 0;
+        transition: .3s;
     }
 
     .links ul {
@@ -1214,6 +1216,7 @@ footer .social-media {
         top: 0;
         left: 50%;
         transform: translate(-50%, -50%);
+        transition: .3s;
     }
 
     .overlay {
@@ -1250,6 +1253,42 @@ footer .social-media {
         pointer-events: auto;
     }
 
-    
+    body.open .link ul::after {
+        opacity: .7;
+        width: 100%;
+    }
+
+    body.open header.scrolled {
+        max-height: 620px;
+    }
+
+    body.open .links {
+        opacity: 1;
+    }
+
+    .showcase-area {
+        margin-top: 40px;
+    }
+
+    .showcase-area .container {
+        grid-template-columns: 1fr;
+        height: revert;
+        justify-items: center;
+        row-gap: 4rem;
+    }
+
+    .showcase-image {
+        min-height: revert;
+        height: 100vw;
+        max-height: 620px;
+        max-width: 450px;
+        margin-left: 0;
+        border-radius: 40px;
+    }
+
+    .showcase-image img {
+        padding-left: 0;
+        width: 520px;
+    }
 }
 
