--- a/css/style.css
+++ b/css/style.css
@@ -1287,7 +1287,7 @@ footer .social-media {
     }
 
     .showcase-image img {
-        padding-left: 0;
+        padding-left: 20px;
         width: 350px;
     }
 
